[package]
name = "ssh_pinger"
version = "0.1.0"
authors = ["0xd34b33f <0xd34b33f@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
ssh2 = "0.5.0"
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
chrono = "0.4.10"
workerpool = "1.2.0"
rand = "0.7.2"
